Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
1.9.0
-
None
Description
If you suffer a disk failure, all affected tablets will be tombstoned upon rereplication. However, these tombstones still participate in the pre-flight check done by kudu fs update_dirs, which means that they'll prevent the removal of the failed disk (unless --force is used).
The invariant here is that a tombstoned tablet doesn't have a persistent data_dir_group in its superblock, so it'll never have a working in-memory data dir group, which means it'll always fail the pre-flight check.