KUDU-2680: ignore tombstones when updating dirs

Previously, when run without the --force configuration, the update_dirs
tool would fail upon meeting a tombstoned tablet. This is because
tombstones don't persist data dir groups, nor do they create them
in-memory upon loading; and the update_dirs tool uses the existence of
an in-memory data dir group to determine whether all tablets would be
considered healthy while staging a new directory configuration.

Since we don't expect tombstones to have data dir groups anyway, we
shouldn't be gating update_dirs on them not having data dir groups.

Change-Id: If39ec768e9328571adc3ed0ef69c6a9309f27989
Reviewed-on: http://gerrit.cloudera.org:8080/12313
Reviewed-by: Adar Dembo <adar@cloudera.com>
Tested-by: Kudu Jenkins